crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__order_by_type_with_custom_constants.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> order_by_type_with_custom_constants.py:1:1
  |
1 | / from sklearn.svm import XYZ, func, variable, Const, Klass, constant
2 | | from subprocess import First, var, func, Class, konst, A_constant, Last, STDOUT
  | |_______________________________________________________________________________^
help: Organize imports
  |
1 + from subprocess import STDOUT, A_constant, Class, First, Last, func, konst, var
2 + 
3 + from sklearn.svm import XYZ, Const, Klass, constant, func, variable
  |
