crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__order_by_type_with_custom_variables_order_by_type_with_custom_variables.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> order_by_type_with_custom_variables.py:1:1
  |
1 | / from sklearn.svm import VAR, Class, MyVar, CONST, abc
2 | | from subprocess import utils, var_ABC, Variable, Klass, CONSTANT, exe
  | |_____________________________________________________________________^
help: Organize imports
  |
1 + from subprocess import CONSTANT, Klass, exe, utils, var_ABC, Variable
2 + 
3 + from sklearn.svm import CONST, Class, abc, MyVar, VAR
  |
