crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__order_relative_imports_by_level.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> order_relative_imports_by_level.py:1:1
  |
1 | / from .a import a
2 | | from ..a import a
3 | | from ..b import a
4 | | from .b import a
  | |________________^
help: Organize imports
  |
1 + from ..a import a
2 + from ..b import a
3 + from .a import a
4 + from .b import a
  |
