crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__preserve_comment_order.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> preserve_comment_order.py:1:1
   |
 1 | / import io
 2 | | # Old MacDonald had a farm,
 3 | | # EIEIO
 4 | | # And on his farm he had a cow,
 5 | | # EIEIO
 6 | | # With a moo-moo here and a moo-moo there
 7 | | # Here a moo, there a moo, everywhere moo-moo
 8 | | # Old MacDonald had a farm,
 9 | | # EIEIO
10 | | from errno import EIO
11 | | import abc
   | |__________^
help: Organize imports
   |
 1 + import abc
 2 + import io
 3 + 
 4 + # Old MacDonald had a farm,
 5 + # EIEIO
 6 + # And on his farm he had a cow,
 7 + # EIEIO
 8 + # With a moo-moo here and a moo-moo there
 9 + # Here a moo, there a moo, everywhere moo-moo
10 + # Old MacDonald had a farm,
11 + # EIEIO
12 + from errno import EIO
   |
