crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__preserve_import_star.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> preserve_import_star.py:1:1
  |
1 | / from some_other_module import some_class
2 | | from some_other_module import *
3 | | # Above
4 | | from some_module import some_class  # Aside
5 | | # Above
6 | | from some_module import *  # Aside
  | |_________________________^
help: Organize imports
  |
1 + # Above
2 + from some_module import *  # Aside
3 + 
4 + # Above
5 + from some_module import some_class  # Aside
6 + from some_other_module import *
7 + from some_other_module import some_class
  |
