crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__preserve_indentation.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> preserve_indentation.py:2:5
  |
1 |   if True:
2 | /     import sys
3 | |     import os
  | |_____________^
4 |   else:
5 |       import sys
  |
help: Organize imports
  |
2 +     import os
3 +     import sys
  |

I001 [*] Import block is un-sorted or un-formatted
 --> preserve_indentation.py:5:5
  |
3 |       import os
4 |   else:
5 | /     import sys
6 | |     import os
  | |_____________^
help: Organize imports
  |
5 +     import os
6 +     import sys
  |
